src/objects/ADAFile__c.object
<CustomObject>
    <description>Contains information about student ADA self-disclosure and requests. This object contains sensitive student information and should only be available to the ADA coordinator and Director of Student Services.</description>
    <fields>
        <fullName>ADAQuickEmail__c</fullName>
        <description>Formula that allows user to select a quick button to send an email to the student, student&apos;s other email, from the adasupport@wgu.edu email address.</description>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot;&amp;Id&amp;&quot;&amp;p2_lkid=&quot;&amp;Contact__r.Id&amp;&quot;&amp;p4=&quot;&amp;Contact__r.OtherEmail__c&amp; 
&quot;&amp;p26=adasupport@wgu.edu&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a00000023DzZ&amp;oid=00Df0000002MhY1&amp;lastMod=1369231498000&quot;,&quot;Send Email&quot;),&quot;_self&quot; )</formula>
        <label>ADA Quick Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADARelatedFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related ADA File for Internal Referral record type.</description>
        <label>ADA Related File</label>
        <referenceTo>ADAFile__c</referenceTo>
        <relationshipLabel>ADA Files</relationshipLabel>
        <relationshipName>ADAFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccommodationReason__c</fullName>
        <description>Describe how an accommodation will enable you to be successful as a student</description>
        <label>Accommodation Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Tutoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aide for Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aide for Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scribes during Objective Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Assessment Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Communication Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Learning Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative/Modified Test Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auxiliary Aids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculator: Approved by WGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Objective Assessment Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Pre-Assessment Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Screen Share and Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent Breaks: Bathroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent Breaks: Food and Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent Breaks:  Stretching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keystroke Override for OLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes:  Approved by WGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Medication Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quiet Room during Objective Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading Out Loud during Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work with one Course Mentor per course</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AllDocumentsReceived__c</fullName>
        <description>Date field that indicates when all the ADA documents were received.</description>
        <label>All Documents Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ApprovedDate__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssistiveSoftware__c</fullName>
        <description>Please list any and all assistive software (including version if known), tools, and/or aids that are currently used as a result of your disability.</description>
        <label>Assistive Software</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Aware of Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerID__c</fullName>
        <formula>Contact__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BestTimetoContact__c</fullName>
        <label>Best Time to Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Daytime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening (6-8pm)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactMethod__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ADA Files</relationshipLabel>
        <relationshipName>ADAFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByDepartment__c</fullName>
        <description>Formula field that displays the department the created works in.</description>
        <formula>CreatedBy.Department</formula>
        <label>Created By Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaytimePhone__c</fullName>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DiagnosticianLetterDocumentation__c</fullName>
        <label>Diagnostician Letter/Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisabilityCategory__c</fullName>
        <label>Disability Category</label>
        <picklist>
            <picklistValues>
                <fullName>Auditory System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain/Head Trauma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circulatory System/Cardiovascular System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digestive System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrine System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immune System/Lymphatic System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integumentary System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Limbs/Body Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muscular System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nervous System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reproductive System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skeletal System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urinary System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EveningPhone__c</fullName>
        <label>Evening Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitations__c</fullName>
        <description>(Medical documentation on these limitations must be submitted in order to complete this request.)</description>
        <inlineHelpText>Describe in your own words limitations caused by the condition you have named.</inlineHelpText>
        <label>Limitations</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalReleaseForm__c</fullName>
        <label>Medical Release Form</label>
        <picklist>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Reason for Referral</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MyDisability__c</fullName>
        <label>My Disability</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <inlineHelpText>Please indicate your current operating system software type (Mac/Windows/Linux/Other) and version, if known.</inlineHelpText>
        <label>Operating System</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PermissionsForm__c</fullName>
        <label>Permissions Form</label>
        <picklist>
            <picklistValues>
                <fullName>Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PermissionsGranted__c</fullName>
        <label>Permissions Granted</label>
        <picklist>
            <picklistValues>
                <fullName>Temporary Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability and Accommodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Permission – Do Not Discuss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryEmail__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enrollment Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <description>Open text field that will house the name of the person who referred the student to the ADA office.</description>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADAFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewedDate__c</fullName>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Student Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed Pending Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentStatus__c</fullName>
        <label>Student Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student (First Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Student (Term 2+)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ADA File</label>
    <listViews>
        <fullName>ADA1NewSelfDisclosures</fullName>
        <columns>NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <columns>BannerID__c</columns>
        <columns>Status__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>StudentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADAFile__c.SelfDisclosure</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inquiry,Requested</value>
        </filters>
        <label>ADA1: New Self-Disclosures</label>
        <sharedTo>
            <role>ADASupportAdministrator</role>
            <role>Registrar</role>
            <role>StudentConductAdministrator</role>
            <role>StudentServicesDirector</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADA2NewReferrals</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TimeZone__c</columns>
        <columns>StudentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADAFile__c.Referral</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Requested,Under Review,Approved,Denied,In Appeal,Pending Start,Closed</value>
        </filters>
        <label>ADA2: New Referrals</label>
        <sharedTo>
            <group>ADASupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADA3UnderReview</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>BannerID__c</columns>
        <columns>StudentStatus__c</columns>
        <columns>AllDocumentsReceived__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Review,Awaiting Student Feedback,In Appeal</value>
        </filters>
        <label>ADA3: Under Review</label>
        <sharedTo>
            <role>ADASupportAdministrator</role>
            <role>Registrar</role>
            <role>StudentConductAdministrator</role>
            <role>StudentServicesDirector</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADA4ApprovedPendingStart</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>BannerID__c</columns>
        <columns>StudentStatus__c</columns>
        <columns>AllDocumentsReceived__c</columns>
        <columns>DiagnosticianLetterDocumentation__c</columns>
        <columns>MedicalReleaseForm__c</columns>
        <columns>PermissionsForm__c</columns>
        <columns>ReviewedDate__c</columns>
        <columns>ApprovedDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Start</value>
        </filters>
        <label>ADA4: Approved, Pending Start</label>
        <sharedTo>
            <role>ADASupportAdministrator</role>
            <role>Registrar</role>
            <role>StudentConductAdministrator</role>
            <role>StudentServicesDirector</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADA5Denied</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Contact__c</columns>
        <columns>StudentStatus__c</columns>
        <columns>ReviewedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>ADA5: Denied</label>
        <sharedTo>
            <group>ADASupport</group>
            <role>ADASupportAdministrator</role>
            <role>Registrar</role>
            <role>StudentConductAdministrator</role>
            <role>StudentServicesDirector</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADA6AllADAFiles</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>StudentID__c</columns>
        <columns>AllDocumentsReceived__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>ADA6: All ADA Files</label>
        <sharedTo>
            <role>ADASupportAdministrator</role>
            <role>Registrar</role>
            <role>StudentConductAdministrator</role>
            <role>StudentServicesDirector</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ADA File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADA Files</pluralLabel>
    <recordTypes>
        <fullName>Referral</fullName>
        <active>true</active>
        <description>Record type used for internal staff ADA referrals.</description>
        <label>Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>SelfDisclosure</fullName>
        <active>true</active>
        <description>Record type used for student self-disclosure of needed ADA accommodation.</description>
        <label>Self Disclosure</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>